@@ -6,7 +6,7 @@ GenericName=Accerciser
 Terminal=false
 Type=Application
 Exec=@prefix@/bin/accerciser
-StartupNotify=false
+StartupNotify=true
 Categories=Application;Development;
 Icon=accerciser
 X-GNOME-Bugzilla-Bugzilla=GNOME
