@@ -33,7 +33,7 @@ An interactive Python tool for querying accessibility information.
 %setup -q
 
 %build
-./configure --prefix=%{prefix} --disable-scrollkeeper
+./configure --prefix=%{prefix} --disable-scrollkeeper --without-pyreqs
 make
 
 %install
@@ -48,7 +48,7 @@ rm -rf $RPM_BUILD_ROOT
 %doc AUTHORS README COPYING NEWS ChangeLog
 %{prefix}/bin/accerciser
 %{prefix}/lib/python?.?/site-packages/accerciser
-# No locale yet %{prefix}/share/locale/*/*/accerciser*
+%{prefix}/share/locale/*/*/accerciser*
 %{prefix}/share/omf/accerciser/*
 %{prefix}/share/gnome/help/accerciser/*
 %{prefix}/share/accerciser/*
@@ -59,5 +59,8 @@ rm -rf $RPM_BUILD_ROOT
 %{prefix}/share/icons/hicolor/scalable/apps/accerciser.svg
 %{prefix}/share/applications/accerciser.desktop
 %changelog
+* Mon Apr 02 2007 Peter Parente <parente@cs.unc.edu>
+- Added without-pyreqs flag to avoid checking for modules at rpmbuild time
+- Added locales to files section
 * Wed Feb 22 2007 Peter Parente <parente@cs.unc.edu>
 - First release
